--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>আয়ের হিসাব সমূহ</title>
-  <link rel="icon" href="" title="" type="" />
+  <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/income-details-7831b.appspot.com/o/nazrul.png?alt=media&token=f4c829f1-6e1f-4413-b8e7-3f56a8943979" title="" type="" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
