--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -64,7 +64,7 @@
 
     table {
       width: 70%;
-      margin: 10px auto;
+      margin: 10px ;
       border-collapse: collapse;
       background-color: #fff;
       border-radius: ;
