--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -159,7 +159,7 @@
        border-radius: 5px;
       }
       textarea{
-       margin-bottom: 50px;
+       margin-bottom: px;
        padding: 8px;
        height: 250px;
        width: 75%;
@@ -168,7 +168,7 @@
        border:  0.2px dotted ;
        font-size: 20px;
        font-family: Serif;
-        zoom: 0.3;
+        zoom: 0.5;
       }
       
       .tw{
@@ -233,7 +233,7 @@
       <textarea id="textArea"></textarea>
     
     </div>
-
+<br/><br/><br/>
     <footer>
       © 2024 created by . MD NAZRUL ISLAM.
     </footer>
