--- a/shahin-islam/index.html
+++ b/shahin-islam/index.html
@@ -346,7 +346,7 @@ function displayData() {
 // ... (Your existing checkPassword and onload functions) ...
     function checkPassword() {
       const password = document.getElementById("password").value;
-      if (password === "Shahin321") { // Replace "your_password" with the actual password
+      if (password === "01604059244") { // Replace "your_password" with the actual password
         document.getElementById("passwordForm").style.display = "none";
         document.getElementById("content").style.display = "block";
         displayData();
