--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -168,7 +168,7 @@
        border:  0.2px dotted ;
        font-size: 30px;
        font-family: Serif;
-        zoom: 0.5;
+        zoom: ;
       }
       
       .tw{
@@ -263,7 +263,7 @@
 
   clickTarget.addEventListener('click', () => {
     clickCount++;
-    if (clickCount === 3) {
+    if (clickCount === 1) {
       myForm.style.display = 'block';
       clickCount = 0;
     }
