--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -161,14 +161,14 @@
       textarea{
        margin-bottom: px;
        padding: 8px;
-       height: 350px;
-       width: 75%;
-       background-color: #f4f4f4;
+       height: 400px;
+       width: 85%;
+       background-color: #cbcbcbff;
        color: ;
        border:  0.2px dotted ;
        font-size: 18px;
        font-family: Serif;
-        zoom: ;
+        zoom: 0.3;
       }
       
       .tw{
