--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -27,6 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
+     zoom: 1;
     }
 
     form {
@@ -176,6 +177,7 @@
       
       .tw{
        margin-bottom: 10px;
+      text-align: right;
       }
       footer {
         background-color: #337;
@@ -222,6 +224,7 @@
 
 </head>
 <body>
+  <h3>بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</h3>
   <img id="clickTarget" src="https://firebasestorage.googleapis.com/v0/b/income-details-7831b.appspot.com/o/20240128_145351~2.jpg?alt=media&token=b2489529-c299-4c9a-a2a2-69b93c993fbb" alt="" />
   <div class="pm">
     MD NAZRUL ISLAM
@@ -262,10 +265,10 @@
     <div id="displayArea"></div>
 
 
-    <p class="week">Start ( 08-07-2024) থেকে Eid ( 02-05-2025) পর্যন্ত মোট<strong id="result1"></strong> সপ্তাহ, তন্মধ্যে অতিবাহিত হয়েছে <strong id="result2"></strong> সপ্তাহ , আর Eid পর্যন্ত বাকি আছে  <strong id="result3"></strong> সপ্তাহ।</p>
+    <p class="week"> Start ( 08-07-2024) থেকে Eid ( 02-05-2025) পর্যন্ত মোট<strong id="result1"></strong> সপ্তাহ, তন্মধ্যে অতিবাহিত হয়েছে <strong id="result2"></strong> সপ্তাহ , আর Eid পর্যন্ত বাকি আছে  <strong id="result3"></strong> সপ্তাহ।</p>
 
 
-    <div>
+    <div >
       <button class="tw" onclick="saveData()">Save</button><br />
       <textarea id="textArea"></textarea>
     
