--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>MD NAZRUL ISLAM</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@100;300;400&display=swap" rel="stylesheet">
+  <link href="" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/income-details-7831b.appspot.com/o/20240128_145351~2.jpg?alt=media&token=b2489529-c299-4c9a-a2a2-69b93c993fbb" title="" type="" />
+  <link rel="icon" href="" title="MD NAZRUL ISLAM" type="" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
@@ -27,7 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     zoom: 0.9;
+     zoom: ;
     }
 
     form {
@@ -225,7 +225,7 @@
 </head>
 <body>
   <h3>بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</h3>
-  <img id="clickTarget" src="https://firebasestorage.googleapis.com/v0/b/income-details-7831b.appspot.com/o/20240128_145351~2.jpg?alt=media&token=b2489529-c299-4c9a-a2a2-69b93c993fbb" alt="" />
+  <img id="clickTarget" src="" alt="" />
   <div class="pm">
     MD NAZRUL ISLAM
   </div>
