--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>MD NAZRUL ISLAM</title>
 
-  <link href="" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@100;300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="" title="MD NAZRUL ISLAM" type="" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -27,7 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     zoom: ;
+     zoom: 0.5;
     }
 
     form {
