--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -216,9 +216,11 @@
         right: 10%;
       }
     .week{
-    font-weight: 100;
+    font-size: 13px;
     font-family: 'Noto Sans Bengali', sans-serif;
     font-weight: 100;
+    color: red;
+    
     }
   </style>
 
