--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -5,7 +5,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@100;300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" href="" title="MD NAZRUL ISLAM" type="" />
+  <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/income-details-7831b.appspot.com/o/imresizer-1728628774960.jpg?alt=media&token=9e433ab9-5342-4937-960b-84f2938b037d" title="MD NAZRUL ISLAM" type="" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
@@ -27,7 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     zoom: 0.5;
+     zoom: 0.4;
     }
 
     form {
@@ -216,10 +216,10 @@
         right: 10%;
       }
     .week{
-    font-size: 13px;
+    font-size: 15px;
     font-family: 'Noto Sans Bengali', sans-serif;
-    font-weight: 100;
-    color: red;
+    font-weight: 10;
+    color: ;
     
     }
   </style>
@@ -227,7 +227,7 @@
 </head>
 <body>
   <h3>بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</h3>
-  <img id="clickTarget" src="" alt="" />
+  <img id="clickTarget" src="https://firebasestorage.googleapis.com/v0/b/income-details-7831b.appspot.com/o/imresizer-1728628774960.jpg?alt=media&token=9e433ab9-5342-4937-960b-84f2938b037d" alt="" />
   <div class="pm">
     MD NAZRUL ISLAM
   </div>
