--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -224,7 +224,8 @@
     font-family: 'Noto Sans Bengali', sans-serif;
     font-weight: 10;
     color: ;
-    zoom: 0.5;
+    zoom: 0.3;
+    margin: 30px;
     }
   </style>
 
