--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -27,7 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     zoom: 0.5;
+     zoom: ;
     }
 
     form {
@@ -220,11 +220,11 @@
         right: 10%;
       }
     .week{
-    font-size: 10px;
+    font-size: 15px;
     font-family: 'Noto Sans Bengali', sans-serif;
     font-weight: 10;
     color: ;
-    zoom: 0.5;
+    zoom: ;
     margin: 30px;
     }
   </style>
