--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -508,7 +508,7 @@
   // Password Verification Logic
   function checkPassword() {
     const password = document.getElementById("password").value;
-    const correctPassword = ""; // Replace with your actual password
+    const correctPassword = "Nazrul"; // Replace with your actual password
 
     if (password === correctPassword) {
       document.getElementById("passwordForm").style.display = "none";
