--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -198,18 +198,18 @@
       }
 
       .hidden-value {
-        zoom: 1;
-        color: #ccc; /* Make the text light gray */
+        zoom: 0.5;
+        color: gray; /* Make the text light gray */
         font-size: 0px; /* Make the text smaller */
         font-weight: normal;
         text-align: right; /* Align text to the right */
       }
             .show-values {
-        zoom: 1;
+        zoom: 0.5;
         font-size: 20px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
-        color: black; /* Change the text color to black */
+        color: red; /* Change the text color to black */
       }
       .showButton {
         background-color: #4CAF50;
