--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -27,7 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     zoom: 1;
+     zoom: 0.5;
      color: ;
     }
 
@@ -206,10 +206,10 @@
       }
             .show-values {
         zoom: 0.5;
-        font-size: 20px; /* Match the font size of other text */
+        font-size: 10px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
-        color: red; /* Change the text color to black */
+        color: ; /* Change the text color to black */
       }
       .showButton {
         background-color: #4CAF50;
