--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -27,7 +27,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     zoom: 0.5;
+     zoom: 1.1;
      color: ;
     }
 
@@ -198,18 +198,18 @@
       }
 
       .hidden-value {
-        zoom: 0.5;
-        color: gray; /* Make the text light gray */
+        zoom: 1.1;
+        color: black; /* Make the text light gray */
         font-size: 0px; /* Make the text smaller */
         font-weight: normal;
         text-align: right; /* Align text to the right */
       }
             .show-values {
-        zoom: 0.5;
+        zoom: 1.5;
         font-size: 10px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
-        color: ; /* Change the text color to black */
+        color: gray; /* Change the text color to black */
       }
       .showButton {
         background-color: #4CAF50;
