--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -198,7 +198,7 @@
       }
 
       .hidden-value {
-        zoom: 1.1;
+        zoom: 1.5;
         color: black; /* Make the text light gray */
         font-size: 0px; /* Make the text smaller */
         font-weight: normal;
@@ -206,10 +206,10 @@
       }
             .show-values {
         zoom: 1.5;
-        font-size: 10px; /* Match the font size of other text */
+        font-size: 15px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
-        color: gray; /* Change the text color to black */
+        color: black; /* Change the text color to black */
       }
       .showButton {
         background-color: #4CAF50;
