--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -12,11 +12,13 @@
  <style>
     body {
       font-family: serif;
-      background-color: #edffed;
+      
       margin: 0;
       padding: 0;
       text-align: center;
       zoom: 2.7; 
+      background: linear-gradient(to bottom right, #c8ffd5, #ffcfcf);
+
     }
 
     h2 {
@@ -198,15 +200,15 @@
       }
 
       .hidden-value {
-        zoom: 0.6;
+        zoom: 0.7;
         color: black; /* Make the text light gray */
-        font-size: 0px; /* Make the text smaller */
+        font-size: 5px; /* Make the text smaller */
         font-weight: normal;
         text-align: right; /* Align text to the right */
       }
             .show-values {
-        zoom: 0.6;
-        font-size: 12px; /* Match the font size of other text */
+        zoom: 0.7;
+        font-size: 14px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
         color: black; /* Change the text color to black */
