--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -20,7 +20,9 @@
       background: linear-gradient(to bottom right, #c8ffd5, #ffcfcf);
 
     }
-
+    #passwordForm{
+      hight: 660px;
+    }
     h2 {
       color: #333;
       margin-top: 30px;
@@ -200,14 +202,14 @@
       }
 
       .hidden-value {
-        zoom: 0.7;
+        zoom: 0.6;
         color: black; /* Make the text light gray */
         font-size: 5px; /* Make the text smaller */
         font-weight: normal;
         text-align: right; /* Align text to the right */
       }
             .show-values {
-        zoom: 0.7;
+        zoom: 0.6;
         font-size: 14px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
