--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -21,7 +21,7 @@
 
     }
     #passwordForm{
-      hight: 660px;
+      height: 660px;
     }
     h2 {
       color: #333;
@@ -202,14 +202,14 @@
       }
 
       .hidden-value {
-        zoom: 0.6;
+        zoom: 0.5;
         color: black; /* Make the text light gray */
-        font-size: 5px; /* Make the text smaller */
+        font-size: 0px; /* Make the text smaller */
         font-weight: normal;
         text-align: right; /* Align text to the right */
       }
             .show-values {
-        zoom: 0.6;
+        zoom: 0.5;
         font-size: 14px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
