--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -36,7 +36,7 @@
     }
 
     form {
-      background-color: #fff;
+      background: none;
       padding: px;
       margin: 20px auto;
       border-radius: 8px;
@@ -75,7 +75,7 @@
       width: ;
       margin: 10px ;
       border-collapse: collapse;
-      background-color: #fff;
+      background: none;
       border-radius: ;
       box-shadow: 0px 0px 5px ,
                    -0px -0px 5px;
@@ -162,7 +162,7 @@
        padding: 5px;
        height: 40px;
        width: 69%;
-       background-color: ;
+       background-color: none;
        font-family: serif;
        border: 0.5px solid ;
        font-size: 20px;
@@ -170,10 +170,10 @@
       }
       textarea{
        margin-top:12px;
-       padding: 15px;
+       padding: 22px;
        height: 350px;
-       width: 78%;
-       background-color: #daffe2;
+       width: 85%;
+       background-color: none;
        margin-bottom: 29px;
        border:  3px dotted ;
        font-size: 15px;
@@ -184,7 +184,7 @@
       .tw{
        margin-top: 10px;
        margin-bottom: 11px;
-
+       background-color: #4CAF50;
        margin-right: 25px;
         
       
