--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -117,7 +117,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background: none;
     padding: 10px;
     border-radius: 5px;
     width: 90%;
@@ -147,7 +147,7 @@
         padding-top: 14px;
         height: 88%;
         width: 92%;
-        background-color: none;
+        background: none;
         margin-left: 4%;
         border-radius: 10px;
         box-shadow: 0px 0px 10px ,
@@ -162,7 +162,7 @@
        padding: 5px;
        height: 40px;
        width: 69%;
-       background-color: none;
+       background: none;
        font-family: serif;
        border: 0.5px solid ;
        font-size: 20px;
@@ -173,7 +173,7 @@
        padding: 22px;
        height: 350px;
        width: 85%;
-       background-color: none;
+       background: none;
        margin-bottom: 29px;
        border:  3px dotted ;
        font-size: 15px;
@@ -186,7 +186,7 @@
        margin-bottom: 11px;
        background-color: #4CAF50;
        margin-right: 25px;
-        
+       border: none;
       
       }
       footer {
