--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -117,7 +117,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: none;
+    background-color: #fff;
     padding: 10px;
     border-radius: 5px;
     width: 90%;
@@ -135,7 +135,7 @@
         height: 85px;
         width: 85px;
         padding: 2.5px;
-        background-color: white;
+        background-color: gray;
         border-radius: 50%;
         box-shadow: 1px 15px 20px ,
                    -1px -1px 20px ;
@@ -187,7 +187,8 @@
        background-color: #4CAF50;
        margin-right: 25px;
        border: none;
-      
+       border-radius: 3px;
+       padding: 3px;
       }
       footer {
         background-color: #337;
@@ -202,14 +203,16 @@
       }
 
       .hidden-value {
-        zoom: 1.3;
+        margin-left: 10px;
+        zoom: 1.4;
         color: black; /* Make the text light gray */
         font-size: 0px; /* Make the text smaller */
         font-weight: normal;
         text-align: right; /* Align text to the right */
       }
             .show-values {
-        zoom: 1.3;
+        margin-left: 10px;
+        zoom: 1.4;
         font-size: 14px; /* Match the font size of other text */
         font-weight: bold;
         text-align: left; /* Align text to the left */
