--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -135,7 +135,7 @@
         height: 85px;
         width: 85px;
         padding: 2.5px;
-        background-color: gray;
+        background: linear-gradient(to bottom right, #c8ffd5, #ffcfcf);
         border-radius: 50%;
         box-shadow: 1px 15px 20px ,
                    -1px -1px 20px ;
@@ -171,7 +171,7 @@
       textarea{
        margin-top:12px;
        padding: 22px;
-       height: 350px;
+       height: 380px;
        width: 85%;
        background: none;
        margin-bottom: 29px;
@@ -188,7 +188,9 @@
        margin-right: 25px;
        border: none;
        border-radius: 3px;
-       padding: 3px;
+       padding: 5px;
+       color: #fff;
+
       }
       footer {
         background-color: #337;
