--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -248,7 +248,7 @@
       box-shadow: 0px 0px 10px ,
                    -0px -0px 10px;
       border: 1px solid ;
-      background-color: #f4ffde;
+      background: linear-gradient(to bottom right, #c8ffd5, #ffcfcf);
       width: 240px;
       padding: 5px;
       padding-top: 40px;
