--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -16,7 +16,7 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      zoom: 3; 
+      zoom: 2.8; 
       background: linear-gradient(to bottom right, #c8ffd5, #ffcfcf);
 
     }
@@ -202,19 +202,15 @@
 
       .hidden-value {
         margin-left: 10px;
-        zoom: 1.4;
-        color: black; /* Make the text light gray */
-        font-size: 0px; /* Make the text smaller */
-        font-weight: normal;
-        text-align: right; /* Align text to the right */
+       font-size: 9px;
+        color: red;
+        font-size: 0px; 
+        
       }
             .show-values {
         margin-left: 10px;
-        zoom: 1.4;
         font-size: 14px; /* Match the font size of other text */
         font-weight: bold;
-        text-align: left; /* Align text to the left */
-        color: black; /* Change the text color to black */
       }
       .showButton {
         background-color: #4CAF50;
@@ -233,7 +229,7 @@
     font-style: italic;
     font-family: 'Noto Sans Bengali';
     font-weight: 250;
-    border: 0.5px dotted gray;
+    border: 0.5px otted gray;
     text-align: justify;
     margin: 10px;
     padding: 10px;
