--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -31,7 +31,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     font-size: ;
+     font-size: 8;
      color: ;
     }
 
