--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -31,8 +31,8 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
-     font-size: 8;
-     color: ;
+     font-size: 5;
+     color: red;
     }
 
     form {
