--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -202,7 +202,7 @@
 
       .hidden-value {
         margin-left: 10px;
-       font-size: 19px;
+       font-size: ;
 
         
        
@@ -210,7 +210,7 @@
       }
             .show-values {
         margin-left: 10px;
-        font-size: 0.1px; /* Match the font size of other text */
+        font-size: 0px; /* Match the font size of other text */
         font-weight: bold;
       }
       .showButton {
