--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -204,6 +204,9 @@
         margin-left: 10px;
         font-size: 9px;
       }
+     span{
+       font-size: 22px;
+     }
             .show-values {
         margin-left: 10px;
         font-size: 0px; /* Match the font size of other text */
