--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -202,7 +202,7 @@
 
       .hidden-value {
         margin-left: 10px;
-      
+      font-size: 12px;
       }
             .show-values {
         margin-left: 10px;
