--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -206,9 +206,12 @@
       }
             .show-values {
         margin-left: 10px;
-        font-size: 13px; /* Match the font size of other text */
+        font-size: 18px; /* Match the font size of other text */
         font-weight: bold;
       }
+     .showButton: hover {
+       background-color: #00ccff;
+     }
       .showButton {
         background-color: #4CAF50;
         color: white;
