--- a/shahin-islam/index.html
+++ b/shahin-islam/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
       font-family: serif;
-      background-color: #f4f4f4;
+      
       margin: 0;
       padding: 0;
       text-align: center;
@@ -388,7 +388,7 @@ function displayData() {
 // ... (Your existing checkPassword and onload functions) ...
     function checkPassword() {
       const password = document.getElementById("password").value;
-      if (password === "01604059244") { // Replace "your_password" with the actual password
+      if (password === "0") { // Replace "your_password" with the actual password  01604059244
         document.getElementById("passwordForm").style.display = "none";
         document.getElementById("content").style.display = "block";
         displayData();
