--- a/shahin-islam/index.html
+++ b/shahin-islam/index.html
@@ -26,6 +26,7 @@
      margin: 20px;
      border: 0.5px dotted gray;
      padding: 6px;
+      display: flex;
     }
 
     form {
@@ -79,7 +80,7 @@
     }
 
     table {
-      width: 70%;
+      width: 78%;
       margin: 10px auto;
       border-collapse: collapse;
       background-color: none;
@@ -89,7 +90,9 @@
       border: none;
       padding: 5px;
     }
-
+ #passwordForm{
+      height: 600px;
+      }
     th, td {
       text-align: left;
       padding: 6px;
@@ -140,7 +143,7 @@ img{
         height: 80px;
         width: 80px;
         padding: 2.5px;
-        margin-top: 70px;
+        margin-top: 79px;
         border-radius: 50%;
         box-shadow: 1px 1px 20px ,
                    -1px -1px 20px ;
