--- a/shahin-islam/index.html
+++ b/shahin-islam/index.html
@@ -147,7 +147,7 @@ img{
         border-radius: 50%;
         box-shadow: 1px 1px 20px ,
                    -1px -1px 20px ;
-        margin-top: 20px;
+ 
         background: linear-gradient(to bottom right, #c8ffd5, #ffcfcf);
       }
       .pm{
@@ -391,7 +391,7 @@ function displayData() {
 // ... (Your existing checkPassword and onload functions) ...
     function checkPassword() {
       const password = document.getElementById("password").value;
-      if (password === "0") { // Replace "your_password" with the actual password  01604059244
+      if (password === "01604059244") { // Replace "your_password" with the actual password  
         document.getElementById("passwordForm").style.display = "none";
         document.getElementById("content").style.display = "block";
         displayData();
