--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -467,6 +467,7 @@
         <p>মোট ফুল: <span class="number">${totalText3}</span><span class="dot">***</span></p>
         <p>মোট সপ্তাহ:<span class="number"> ${Object.keys(data).length}</span><span class="dot">***</span></p>
         <p>প্রতিদিনের আয়: <span class="number">${averageIncome.toFixed(2)}</span><span class="dot">***</span></p>
+        <p>মোট দিন: <span class="number">${daysDiff}</span><span class="dot">***</span></p>
           
         <button class="showButton" id="showButton" onclick="toggleVisibility()"><i class="fa fa-eye"></button></div>`; 
         
